<resources>
    <string name="app_name">Yolanda\'s List Of Lists</string>
    <string name="delete_first">Delete First</string>
    <string name="add_new">Add New</string>
    <string name="hello">hello</string>
    <string name="listnametoshow">listNameToShow</string>
    <string name="add_list">add</string>
    <string name="delete_list">delete</string>
    <string name="copy_list">copy</string>
    <string name="send_as_text_message">send as text message</string>
    <string name="delete_all_items">delete all items</string>
    <string name="email_list">email list</string>
    <string name="undo">undo</string>
    <string name="share_list">share list</string>
    <string name="switch_from_sorted_to_dragable">switch from sorted to dragable</string>
    <string name="edit_settings">edit settings</string>
        <string name="share_lists">share lists</string>
        <string name="switch_from_dragable_to_sorted">switch from dragable to sorted</string>
</resources>