<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
          
        <item android:id="@+id/action_add"
          android:icon="@drawable/ic_new"
          android:title="@string/add_list"
          android:showAsAction="ifRoom"/>
        
        <item android:id="@+id/action_discard"
          android:icon="@drawable/ic_discard"
          android:title="@string/delete_list"
          android:showAsAction="ifRoom"/>
   
        <item android:id="@+id/action_copy"
          android:icon="@drawable/ic_copy"
          android:title="@string/copy_list"
          android:showAsAction="ifRoom"/>
        
        <item android:id="@+id/action_share1"
          android:icon="@drawable/ic_share"
          android:title="@string/share_lists"
          android:showAsAction="ifRoom"/>
        
        <item android:id="@+id/action_cog"
          android:icon="@drawable/ic_import_export"
          android:title="@string/edit_settings"
          android:showAsAction="ifRoom"/>
</menu>