<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   
        <item android:id="@+id/action_text_message"
          android:icon="@drawable/ic_comment_empty"
          android:title="@string/send_as_text_message"
          android:showAsAction="ifRoom"/>
        
        <item android:id="@+id/action_email"
          android:icon="@drawable/ic_email"
          android:title="@string/email_list"
          android:showAsAction="ifRoom"/>
   
        <item android:id="@+id/action_discard"
          android:icon="@drawable/ic_discard"
          android:title="@string/delete_all_items"
          android:showAsAction="ifRoom"/>
   
        <item android:id="@+id/action_undo"
          android:icon="@drawable/ic_undo"
          android:title="@string/undo"
          android:showAsAction="ifRoom"/>
   
</menu>